--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.2",
     "@nuxtjs/tailwindcss": "^6.14.0"
   }
 }
