chore: update biome config

--- a/biome.json
+++ b/biome.json
@@ -17,6 +17,9 @@
       "recommended": true
     }
   },
+  "html": {
+    "experimentalFullSupportEnabled": true
+  },
   "assist": {
     "enabled": true,
     "actions": {
