--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "nuxt": "^4.2.0",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.2",
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "prettier": "3.6.2"
+    "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1"
   }
 }
