--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "printWidth": 120,
   "singleQuote": true,
   "arrowParens": "avoid",
-  "endOfLine": "lf"
+  "endOfLine": "lf",
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./app/assets/css/main.css"
 }
