--- a/biome.json
+++ b/biome.json
@@ -20,6 +20,11 @@
   "html": {
     "experimentalFullSupportEnabled": true
   },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    }
+  },
   "assist": {
     "enabled": true,
     "actions": {
